# rating-evaluation

./: .dockerignore  .gitignore  Dockerfile.mlflow  Dockerfile.serve  README.md  automl_model_predictor.ipynb  automl_test.ipynb  docker-compose.yml  flaml_experiment.ipynb  mlflow.db  mlflow.ipynb  product_genarator.ipynb  pyproject.toml  rating_genarator.ipynb  rating_genarator_streaming.ipynb  reviews_evaluator.ipynb
app/: main.py
data/: produtcs.csv  reviews_1.csv  reviews_2.csv  reviews_3.csv  reviews_4.csv
docker/: compose.yml  create_volumes.sh
mlruns/1/models/m-621cb02a4f0347c8bab13097fbf1515b/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/2/models/m-b4a9ea3c82544d1aa40324ee6b814c7f/artifacts/: MLmodel  conda.yaml  model.pkl
models/: model.pkl  vectorizer.pkl
src/: data_generator.py  predict.py  preprocessing.py  train.py
