[project]
name = "rating-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon>=1.5.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-ollama>=1.0.1",
    "pandas>=2.3.3",
    "pygraphviz>=1.14",
]
