[project]
name = "rating-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon>=1.5.0",
    "flaml>=2.5.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kafka-python>=2.3.0",
    "langchain>=1.2.6",
    "langchain-ollama>=1.0.1",
    "mlflow>=3.9.0",
    "pandas>=2.3.3",
    "pygraphviz>=1.14",
]
