[project]
name = "rating-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.2",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "langchain>=1.2.6",
    "langchain-ollama>=1.0.1",
    "mlflow>=3.10.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]
